# GameOfLife

./: gameoflife.py  pyproject.toml
