[tool.poetry]
name = "gameoflife"
version = "0.1.0"
description = ""
authors = ["Edward Francis <edwardafrancis@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
